--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.21.1",
     "mongodb": "^6.11.0",
     "mongoose": "^8.8.3",
-    "nodemon": "^3.1.7"
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.7",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1",
