--- a/package.json
+++ b/package.json
@@ -18,11 +18,8 @@
     "mongoose": "^8.8.3",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
-    "winston": "^3.17.0"
-  },
-  "devDependencies": {
+    "winston": "^3.17.0",
     "bcrypt": "^5.1.1",
-    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2"
   }
 }
