Refactored the original recursive function in createFetchCall to a generator function for robustness

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "node-fetch": "^3.3.2"
   }
 }
